--- a/affinitic/skin/skins/affinitic_skin_custom_templates/style/style.css
+++ b/affinitic/skin/skins/affinitic_skin_custom_templates/style/style.css
@@ -1,5 +1,5 @@
 body{
-background-image: url(../img/background_body.jpg);
+background-image: url(../img/background_body.gif);
 background-color:#7e899d;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
@@ -7,6 +7,7 @@ font-family: Verdana, Arial, Helvetica, sans-serif;
 #principal{
 margin-left: auto;
 margin-right: auto;
+margin-bottom: 30px;
 width: 800px;
 padding: 0;
 }
@@ -19,8 +20,7 @@ width: 800px;
 }
 
 .title{
-background-color: #aec5ed;
-background-image: url(../img/background_title.jpg);
+background-image: url(../img/background_title.gif);
 width: 800px;
 height: 40px;
 font-family: Arial;
@@ -30,6 +30,18 @@ text-indent: 17px;
 color: #8a9cbc;
 }
 
+.title_txt{
+width: 100%;
+height: 100%;
+}
+
+.affinitic_logo_bas{
+position:relative;
+float: right;
+margin-right: 10px;
+margin-top: 0;
+}
+
 .under_title{
 background-color: #aec5ed;
 width: 800px;
@@ -37,25 +49,25 @@ height: 27px;
 }
 
 .c01{
-background-image: url(../img/01.jpg);
+background-image: url(../img/01.gif);
 width: 39px;
 height: 12px;
 }
 
 .c02{
-background-image: url(../img/02.jpg);
+background-image: url(../img/02.gif);
 height: 12px;
 width: 722px;
 }
 
 .c03{
-background-image: url(../img/03.jpg);
+background-image: url(../img/03.gif);
 width: 39px;
 height: 12px;
 }
 
 .c04{
-background-image: url(../img/04.jpg);
+background-image: url(../img/04.gif);
 width: 39px;
 }
 
@@ -68,24 +80,24 @@ font-family: Verdana;
 }
 
 .c06{
-background-image: url(../img/06.jpg);
+background-image: url(../img/06.gif);
 width: 39px;
 }
 
 .c07{
-background-image: url(../img/07.jpg);
+background-image: url(../img/07.gif);
 width: 39px;
 height: 39px;
 }
 
 .c08{
-background-image: url(../img/08.jpg);
+background-image: url(../img/08.gif);
 height: 39px;
 width: 722px;
 }
 
 .c09{
-background-image: url(../img/09.jpg);
+background-image: url(../img/09.gif);
 width: 39px;
 height: 39px;
 }
@@ -96,52 +108,67 @@ height: 27px;
 }
 
 .cb01{
-background-image: url(../img/b01.jpg);
+background-image: url(../img/b01.gif);
 width: 39px;
 height: 10px;
 }
 
 .cb02{
-background-image: url(../img/b02.jpg);
+background-image: url(../img/b02.gif);
 height: 10px;
 width: 722px;
 }
 
 .cb03{
-background-image: url(../img/b03.jpg);
+background-image: url(../img/b03.gif);
 width: 39px;
 height: 10px;
 }
 
 .cb04{
-background-image: url(../img/b04.jpg);
+background-image: url(../img/b04.gif);
 width: 1px;
 height: 64px;
 }
 
 .cb05{
-background-image: url(../img/b04.jpg);
+background-image: url(../img/b04.gif);
 }
 
 .cb06{
-background-image: url(../img/b04.jpg);
+background-image: url(../img/b04.gif);
 width: 39px;
 }
 
 .cb07{
-background-image: url(../img/b07.jpg);
+background-image: url(../img/b07.gif);
 width: 39px;
 height: 10px;
 }
 
 .cb08{
-background-image: url(../img/b08.jpg);
+background-image: url(../img/b08.gif);
 height: 10px;
 width: 722px;
 }
 
 .cb09{
-background-image: url(../img/b09.jpg);
+background-image: url(../img/b09.gif);
 width: 39px;
 height: 10px;
+}
+
+.logos_footer{
+width: 100%;
+height: 64px;
+text-align: justify;
+}
+
+.imglogo{
+margin-left: 64px;
+margin-right: 64px;
+}
+
+img{
+border: none;
 }
