--- a/affinitic/skin/skins/affinitic_skin_styles/main.css
+++ b/affinitic/skin/skins/affinitic_skin_styles/main.css
@@ -32,6 +32,7 @@ margin-right: auto;
 width: 800px;
 margin-left: auto;
 margin-right: auto;
+margin-bottom: 30px;
 }
 .title{
 background-image: url(background_title.gif);
