--- a/affinitic/skin/static/styles/style.css
+++ b/affinitic/skin/static/styles/style.css
@@ -2,8 +2,30 @@ body{
   margin: 0;
   padding: 0;
   background-image: url("../images/background.png");
+  background-color: #aec5ed;
+  color: #FFF;
+  font-size: 9pt;
+  font-family: verdana, arial, helvetica, sans-serif;
 }
 
+img{
+  border: 0;
+}
+
+ul{
+  padding: 0;
+}
+
+.page-content{
+  font-size: 0.8em;
+}
+
+.title{
+  font-size: 2.5em;
+  color: #8a9cbc;
+  padding-left: 15px;
+  font-variant: small-caps;
+}
 
 .main{
   width: 100%;
@@ -22,9 +44,143 @@ body{
 }
 
 .content{
-  width: 100%;
+  position: relative;
+}
+
+.content-top{
+  height: 40px;
+  background-image: url("../images/content_top.png");
+  background-repeat: no-repeat;
+}
+
+.content-top-second{
+  height: 26px;
+  background-color: #aec5ed;
+}
+
+.content-middle{
+}
+
+.content-middle-center{
+  background-color: red;
+}
+
+.content-table{
+  background-color: #8a9cbc;
+}
+
+.content-table-top-left{
+  width: 11px;
+  height: 10px;
+  background-image: url("../images/content_table_top_left.png");
+}
+
+.content-table-top{
+  width: 723px;
+  background-color: #8a9cbc;
+}
+
+.content-table-top-right{
+  width: 12px;
+  height: 10px;
+  background-image: url("../images/content_table_top_right.png");
+}
+
+.content-table-left{
+  background-color: #aec5ed;
+  width: 27px;
+}
+
+.content-table-right{
+  background-color: #aec5ed;
+  width: 27px;
+}
+
+.content-table-bottom{
+  background-color: #8a9cbc;
+}
+
+.content-table-bottom-left{
+  height: 12px;
+  background-image: url("../images/content_table_bottom_left.png");
+}
+
+.content-table-bottom-right{
+  height: 12px;
+  background-image: url("../images/content_table_bottom_right.png");
+}
+
+.content-bottom-left{
+  height: 27px;
+  width: 27px;
+  background-image: url("../images/content_bottom_left.png");
+}
+
+.content-bottom-center{
+  background-color: #aec5ed;
+  width: 746px;
+}
+
+.content-bottom-right{
+  height: 27px;
+  width: 27px;
+  background-image: url("../images/content_bottom_right.png");
 }
 
 .footer{
-  width: 100%;
+  height: 143px;
+  margin-top: 27px;
+  margin-bottom: 22px;
+}
+
+.footer-table-top-left{
+  width: 10px;
+  height: 10px;
+  background-image: url("../images/footer_table_top_left.png");
+}
+
+.footer-table-top-center{
+  width: 780px;
+  background-color: #adc3ec;
+}
+
+.footer-table-top-right{
+  width: 10px;
+  height: 10px;
+  background-image: url("../images/footer_table_top_right.png");
+}
+
+.footer-table-middle{
+  height: 64px;
+  background-image: url("../images/footer_background.png");
+  font-size: 0.6em;
+  color: #EEE;
+  text-align: center;
+}
+
+.footer-table-bottom-left{
+  width: 10px;
+  height: 10px;
+  background-image: url("../images/footer_table_bottom_left.png");
+}
+
+.footer-table-bottom-center{
+  background-color: #8c9ebe;
+}
+
+.footer-table-bottom-right{
+  width: 10px;
+  height: 10px;
+  background-image: url("../images/footer_table_bottom_right.png");
+}
+
+.powered{
+  text-align: center;
+}
+
+.powered li{
+  display: inline;
+  text-align:center;
+  padding-left: 80px;
+  padding-right: 80px;
 }
