centrage footer. modification taille police.

--- a/affinitic/skin/browser/stylesheets/main.css
+++ b/affinitic/skin/browser/stylesheets/main.css
@@ -1,5 +1,9 @@
 /* Stylesheet for the 'affinitic.skin' Plone theme */
 
+body.smallText {
+font-size:11pt;
+}
+
 .documentFirstHeading {
 display: none;
 }
