--- a/affinitic/skin/static/styles/style.css
+++ b/affinitic/skin/static/styles/style.css
@@ -1,10 +1,10 @@
 body{
   margin: 0;
   padding: 0;
-  background-image: url("../images/background.png");
+  background-image: url("background.png");
   background-color: #aec5ed;
   color: #FFF;
-  font-size: 9pt;
+  font-size: 11pt;
   font-family: verdana, arial, helvetica, sans-serif;
 }
 
@@ -32,7 +32,7 @@ ul{
 }
 
 .site{
-  position: relative;
+  /*position: relative;*/
   width: 800px;
   vertical-align: middle;
   margin: auto;
@@ -49,7 +49,7 @@ ul{
 
 .content-top{
   height: 40px;
-  background-image: url("../images/content_top.png");
+  background-image: url("content_top.png");
   background-repeat: no-repeat;
 }
 
@@ -82,69 +82,72 @@ ul{
 .content-table-top-left{
   width: 14px;
   height: 14px;
-  background-image: url("../images/content_table_top_left.png");
+  background-image: url("content_table_top_left.png");
 }
 
 .content-table-top-center{
   width: 719px;
-  background-image: url("../images/content_table_top_center.png");
+  background-image: url("content_table_top_center.png");
 }
 
 .content-table-top-right{
   width: 14px;
   height: 14px;
-  background-image: url("../images/content_table_top_right.png");
+  background-image: url("content_table_top_right.png");
 }
 
 .content-table-middle-left{
-  background-image: url("../images/content_table_middle_left.png");
+  background-image: url("content_table_middle_left.png");
 }
 
 .content-table-middle-right{
-  background-image: url("../images/content_table_middle_right.png");
+  background-image: url("content_table_middle_right.png");
 }
 
 .content-table-bottom-left{
   height: 14px;
-  background-image: url("../images/content_table_bottom_left.png");
+  background-image: url("content_table_bottom_left.png");
 }
 
 .content-table-bottom-center{
-  background-image: url("../images/content_table_bottom_center.png");
+  background-image: url("content_table_bottom_center.png");
 }
 
 .content-table-bottom-right{
-  background-image: url("../images/content_table_bottom_right.png");
+  background-image: url("content_table_bottom_right.png");
 }
 
 .content-bottom-left{
   height: 27px;
   width: 27px;
-  background-image: url("../images/content_bottom_left.png");
+  background-image: url("content_bottom_left.png");
 }
 
 .content-bottom-center{
   background-color: #aec5ed;
   width: 746px;
-  background-image: url("../images/content_bottom_center.png");
+  background-image: url("content_bottom_center.png");
 }
 
 .content-bottom-right{
   height: 27px;
   width: 27px;
-  background-image: url("../images/content_bottom_right.png");
+  background-image: url("content_bottom_right.png");
 }
 
 .footer{
+  width:800px;
   height: 143px;
   margin-top: 27px;
   margin-bottom: 22px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .footer-table-top-left{
   width: 10px;
   height: 10px;
-  background-image: url("../images/footer_table_top_left.png");
+  background-image: url("footer_table_top_left.png");
 }
 
 .footer-table-top-center{
@@ -155,12 +158,12 @@ ul{
 .footer-table-top-right{
   width: 10px;
   height: 10px;
-  background-image: url("../images/footer_table_top_right.png");
+  background-image: url("footer_table_top_right.png");
 }
 
 .footer-table-middle{
   height: 64px;
-  background-image: url("../images/footer_background.png");
+  background-image: url("footer_background.png");
   font-size: 0.6em;
   color: #EEE;
   text-align: center;
@@ -169,7 +172,7 @@ ul{
 .footer-table-bottom-left{
   width: 10px;
   height: 10px;
-  background-image: url("../images/footer_table_bottom_left.png");
+  background-image: url("footer_table_bottom_left.png");
 }
 
 .footer-table-bottom-center{
@@ -179,7 +182,7 @@ ul{
 .footer-table-bottom-right{
   width: 10px;
   height: 10px;
-  background-image: url("../images/footer_table_bottom_right.png");
+  background-image: url("footer_table_bottom_right.png");
 }
 
 .powered{
