--- a/affinitic/skin/static/styles/style.css
+++ b/affinitic/skin/static/styles/style.css
@@ -3,7 +3,7 @@ body{
   padding: 0;
   background-image: url("../images/background.png");
   background-color: #aec5ed;
-  color: #FFF;
+  color: #d3e7f1;
   font-size: 11pt;
   font-family: verdana, arial, helvetica, sans-serif;
 }
