modification taille et couleur texte

--- a/affinitic/skin/browser/stylesheets/main.css
+++ b/affinitic/skin/browser/stylesheets/main.css
@@ -1,6 +1,6 @@
 /* Stylesheet for the 'affinitic.skin' Plone theme */
 
-body.smallText {
+body{
 background-color:#8a9dbd;
 font-size:11pt;
 color:#d3e7f1;
