--- a/affinitic/skin/static/css/style.css
+++ b/affinitic/skin/static/css/style.css
@@ -1,402 +1,379 @@
-@charset "utf-8";
-/* CSS Document */
-
+@charset "utf-8";/* CSS Document */
 /* CSS INITIALIZER */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
- margin:0;
- padding:0;
+margin: 0;
+padding: 0;
 }
 table {
- border-collapse:collapse;
- border-spacing:0;
+border-collapse: collapse;
+border-spacing: 0;
 }
 fieldset,img {
- border:0;
+border: 0;
 }
 address,caption,cite,code,dfn,em,strong,th,var {
- font-style:normal;
- font-weight:normal;
+font-style: normal;
+font-weight: normal;
 }
 ol,ul {
- list-style:none;
+list-style: none;
 }
 caption,th {
- text-align:left;
+text-align: left;
 }
 h1,h2,h3,h4,h5,h6 {
- font-size:100%;
- font-weight:normal;
+font-size: 100%;
+font-weight: normal;
 }
 q:before,q:after {
- content:'';
+content: '';
 }
-abbr,acronym { border:0;
+abbr,acronym {
+border: 0;
 }
-
-
 /* CSS - General */
 /*****************/
-
 body {
-	background: #FFF url('../images/body-bg.gif') repeat;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #5C6A87;
-	font-size: 14px;
+background: #FFF url('../images/body-bg.gif') repeat;
+font-family: Arial,Helvetica,sans-serif;
+color: #5C6A87;
+font-size: 14px;
 }
-
 #background-affinitic {
-	width: 920px;
-	height: 778px;
-	margin: auto;
-	background: transparent url('../images/affinitic-bg.png') no-repeat top center;
+width: 920px;
+height: 778px;
+margin: auto;
+background: transparent url('../images/affinitic-bg.png') no-repeat top center;
 }
-
 #background-menu {
-	width: 100%;
-	height: 30px;
-	margin-top: -712px;
-	background-color: #8A9ABC;
-	border-bottom: 7px solid #AEC5ED;
+width: 100%;
+height: 30px;
+margin-top: -712px;
+background-color: #8A9ABC;
+border-bottom: 7px solid #AEC5ED;
 }
-
 #menu-shadow {
-	width: 100%;
-	height: 4px;
-	background: transparent url('../images/menu-shadow-bg.png') repeat-x;
+width: 100%;
+height: 4px;
+background: transparent url('../images/menu-shadow-bg.png') repeat-x;
 }
-
 #container {
-	position: relative;
-	width: 888px;
-	margin: auto;
-	margin-top: -97px;
-	padding: 3px 16px;
+position: relative;
+width: 888px;
+margin: auto;
+margin-top: -97px;
+padding: 3px 16px;
 }
-
 #logo {
-	position: absolute;
-	top: 0px;
-	left: 11px;
+position: absolute;
+top: 0px;
+left: 11px;
 }
-
 #menu-language {
-    position: relative;
-    left: 832px;
-    top: 0px;
-    width: 50px;
-    text-align: center;
-    font-size: 10px;
-    color: #8A9ABC;
-    border: 1px solid #8A9ABC;
-    background-color: #E3EEFF;
-    padding: 2px 1px;
+position: relative;
+left: 832px;
+top: 0px;
+width: 50px;
+text-align: center;
+font-size: 10px;
+color: #8A9ABC;
+border: 1px solid #8A9ABC;
+background-color: #E3EEFF;
+padding: 2px 1px;
 }
-
-#menu-language a:link, #menu-language a:active, #menu-language a:visited {
-    color: #8A9ABC;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
+#menu-language a:link,#menu-language a:active,#menu-language a:visited {
+color: #8A9ABC;
+text-decoration: none;
+font-weight: bold;
+text-transform: uppercase;
 }
-
 #main-menu {
-    position: relative;
-    width: 761px;
-    height: 33px;
-    left: 125px;
-    margin: 36px 0 50px 0;
+position: relative;
+width: 761px;
+height: 33px;
+left: 125px;
+margin: 36px 0 50px 0;
 }
-
-#main-menu a:link, #main-menu a:active, #main-menu a:visited {
-    position: relative;
-    display: block;
-    float: left;
-    margin: 0;
-    top: 0px;
-    color: #FFF;
-    font-size: 13px;
-    line-height: 14px;
-    height: 14px;
-    text-decoration: none;
-    padding: 8px 11px 10px;
-    background: none;
+#main-menu a:link,#main-menu a:active,#main-menu a:visited {
+position: relative;
+display: block;
+float: left;
+margin: 0;
+top: 0px;
+color: #FFF;
+font-size: 13px;
+line-height: 14px;
+height: 14px;
+text-decoration: none;
+padding: 8px 11px 10px;
+background: none;
 }
-
 #main-menu a:hover {
-    background: transparent url('../images/menu-pointer.gif') no-repeat bottom center;
+background: transparent url('../images/menu-pointer.gif') no-repeat bottom center;
 }
-
 #main-menu div#research {
-    position: absolute;
-    top: 3px;
-    right: 0px;
+position: absolute;
+top: 3px;
+right: 0px;
 }
-
 #main-menu div#research input {
-    border: 1px solid #ADC4EC;
-    font-size: 10px;
-    color: #656565;
-    padding: 1px 4px;
-    width: 122px;
-    height: 13px;
-    background: #FFF url('../images/input-bg.gif') repeat-x top left;
+border: 1px solid #ADC4EC;
+font-size: 10px;
+color: #656565;
+padding: 1px 4px;
+width: 122px;
+height: 13px;
+background: #FFF url('../images/input-bg.gif') repeat-x top left;
 }
-
 #main-menu div#research img {
-    position: relative;
-    top: 4px;
+position: relative;
+top: 4px;
+}
+h1.documentFirstHeading,h1.title {
+font-size: 24px;
+font-weight: bold;
+color: #8A9ABC;
+line-height: 22px;
+border-bottom: 2px solid #8A9ABC;
+margin: 20px 0 20px 0;
 }
 
-h1.documentFirstHeading {
-    font-size: 24px;
-    font-weight: bold;
-    color: #8A9ABC;
-    line-height: 22px;
-    border-bottom: 2px solid #8A9ABC;
-    margin: 20px 0 20px 0;
+exte-reference h3 {
+font-size: 18px;
+font-weight: bold;
+color: #8A9ABC;
+/*margin: 1.2em 0 0.4em;*/
+margin-left:55px;
+border: none;
 }
 
 h2 {
-    font-size: 18px;
-    font-weight: bold;
-    color: #8A9ABC;
-    margin: 1.2em 0 0.4em;
-    border: none;
+font-size: 18px;
+font-weight: bold;
+color: #8A9ABC;
+margin: 1.2em 0 0.4em;
+border: none;
 }
 
 #content img.border {
-    border: 1px solid #8A9ABC;
+border: 1px solid #8A9ABC;
 }
-
 p {
-    font-size: 14px;
-    color: #5C6A87;
-    margin-bottom: 1em;    
+font-size: 14px;
+color: #5C6A87;
+margin-bottom: 1em;
 }
-
-#content a:link, #content a:visited, #content a:active {
-    color: #8A9ABC;
-    text-decoration: none;
-    border-bottom: 1px dotted;
+#content a:link,#content a:visited,#content a:active {
+color: #8A9ABC;
+text-decoration: none;
+border-bottom: 1px dotted;
 }
-
 #content a:hover {
-    color: #36435D;
+color: #36435D;
 }
-
-ul, ol { margin-left: 20px; }
-
+ul,ol {
+margin-left: 20px;
+}
 li {
-    margin: 1px 0 4px 0;
-    padding: 0 0 0 12px;
-    background: transparent url('../images/puce-4x4-blue.gif') no-repeat left 0.6em;
+margin: 1px 0 4px 0;
+padding: 0 0 0 12px;
+background: transparent url('../images/puce-4x4-blue.gif') no-repeat left 0.6em;
 }
-
 li ul li {
-    color: red;
-    margin: 1px 0 4px 30px;
+color: red;
+margin: 1px 0 4px 30px;
 }
-
-strong { font-weight: bold; }
-
-.spacer-half { 
-    height: 0.5em;
+strong {
+font-weight: bold;
 }
-
-.clear { clear: both; }
-
-#informations, #informations-homepage {
-    position: relative;
-    margin: 20px 0 15px 0;
-    text-align: center;
+.spacer-half {
+height: 0.5em;
 }
-
-#informations p, #informations-homepage p {
-    color: #FFF;
-    font-size: 12px;
-    font-weight: bold;
-    margin-bottom: 15px;
+.clear {
+clear: both;
 }
-
-#informations-homepage p { color: #8A9ABC; }
-
-#informations img, #informations-homepage img { margin: 0 6px; }
-
-#informations, div#our-realisation #our-realisation-bg {
-    position: relative;
-    background-color: #AEC5ED;
-    border-top: 2px solid #8A9ABC;
-    border-bottom: 2px solid #8A9ABC;    
+#informations,#informations-homepage {
+position: relative;
+margin: 20px 0 15px 0;
+text-align: center;
 }
-
-#informations #bg-top, #informations #bg-bottom, div#our-realisation #our-realisation-bg #bg-top, div#our-realisation #our-realisation-bg #bg-bottom {
-    height: 15px;
-    background: transparent url('../images/bottom-bg-top.gif') repeat-x top left;
+#informations p,#informations-homepage p {
+color: #FFF;
+font-size: 12px;
+font-weight: bold;
+margin-bottom: 15px;
 }
-
-#informations #bg-bottom, div#our-realisation #our-realisation-bg #bg-bottom { background: transparent url('../images/bottom-bg-bottom.gif') repeat-x top left; }
-
+#informations-homepage p {
+color: #8A9ABC;
+}
+#informations img,#informations-homepage img {
+margin: 0 6px;
+}
+#informations,div#our-realisation #our-realisation-bg {
+position: relative;
+background-color: #AEC5ED;
+border-top: 2px solid #8A9ABC;
+border-bottom: 2px solid #8A9ABC;
+}
+#informations #bg-top,#informations #bg-bottom,div#our-realisation #our-realisation-bg #bg-top,div#our-realisation #our-realisation-bg #bg-bottom {
+height: 15px;
+background: transparent url('../images/bottom-bg-top.gif') repeat-x top left;
+}
+#informations #bg-bottom,div#our-realisation #our-realisation-bg #bg-bottom {
+background: transparent url('../images/bottom-bg-bottom.gif') repeat-x top left;
+}
 /* Homepage */
 /************/
-
-.homepage p { color: #747474; }
-
+.homepage p {
+color: #747474;
+}
 .homepage img {
-    float: left;
-    margin: 0 15px 15px 0;
-    border: 1px solid #8A9ABC;
+float: left;
+margin: 0 15px 15px 0;
+border: 1px solid #8A9ABC;
 }
-
 div#our-realisation {
-    position: relative;
-    width: 100%;
-    margin: 30px 0 0 0;
+position: relative;
+width: 100%;
+margin: 30px 0 0 0;
 }
-
 div#our-realisation h1.documentFirstHeading {
-    position: relative;
-    width: 895px;
-    border: none;
-    margin: auto;
-    margin-bottom: -3px;
+position: relative;
+width: 895px;
+border: none;
+margin: auto;
+margin-bottom: -3px;
 }
-
-div#our-realisation #our-realisation-bg #bg-top, div#our-realisation #our-realisation-bg #bg-bottom {
-    height: 15px;
-    background: transparent url('../images/bottom-bg-top.gif') repeat-x top left;
+div#our-realisation #our-realisation-bg #bg-top,div#our-realisation #our-realisation-bg #bg-bottom {
+height: 15px;
+background: transparent url('../images/bottom-bg-top.gif') repeat-x top left;
 }
-
-div#our-realisation #our-realisation-bg #bg-bottom { background: transparent url('../images/bottom-bg-bottom.gif') repeat-x top left; }
-
+div#our-realisation #our-realisation-bg #bg-bottom {
+background: transparent url('../images/bottom-bg-bottom.gif') repeat-x top left;
+}
 div#our-realisation #our-realisation-bg .content {
-    position: relative;
-    width: 895px;
-    margin: auto;
+position: relative;
+width: 895px;
+margin: auto;
 }
-
-div#our-realisation a:link.realisation, div#our-realisation a:active.realisation, div#our-realisation a:visited.realisation {
-    position: relative;
-    float: left;
-    width: 286px;
-    margin-right: 15px;
-    text-decoration: none;
-    color: #6A7896;
-    border: 1px solid #E3EEFF;
-    border-bottom: 1px solid #E3EEFF;
-    background-color: #E3EEFF;
+div#our-realisation a:link.realisation,div#our-realisation a:active.realisation,div#our-realisation a:visited.realisation {
+position: relative;
+float: left;
+width: 286px;
+margin-right: 15px;
+text-decoration: none;
+color: #6A7896;
+border: 1px solid #E3EEFF;
+border-bottom: 1px solid #E3EEFF;
+background-color: #E3EEFF;
 }
-
 div#our-realisation a.realisation.last {
-    margin-right: 0px;
+margin-right: 0px;
 }
-
 div#our-realisation a:hover.realisation {
-    border-color: #6A7896;
-    background-color: #6A7896;
-    color: #E3EEFF;
+border-color: #6A7896;
+background-color: #6A7896;
+color: #E3EEFF;
 }
-
-div#our-realisation .realisation .shadow, .realisation .shadow {
-    display: block;
-    position: absolute;
-    width: 286px;
-    height: 161px;
-    top: 0px;
-    left: 0px;
-    background: transparent url('../images/shadow-realisation-homepage.png') no-repeat top left;
+div#our-realisation .realisation .shadow,.realisation .shadow {
+display: block;
+position: absolute;
+width: 286px;
+height: 161px;
+top: 0px;
+left: 0px;
+background: transparent url('../images/shadow-realisation-homepage.png') no-repeat top left;
 }
-
-div#our-realisation .realisation .description, .realisation .description {
-    position: relative;
-    display: block;
-    width: 280px;
-    padding: 3px;
-    text-align: right;
-    text-decoration: none;
-    font-size: 12px;
-    background: none;
+div#our-realisation .realisation .description,.realisation .description {
+position: relative;
+display: block;
+width: 280px;
+padding: 3px;
+text-align: right;
+text-decoration: none;
+font-size: 12px;
+background: none;
 }
-
 /* Realisation */
 /***************/
-
-#content a:link.realisation, #content a:active.realisation, #content a:visited.realisation {
-    position: relative;
-    width: 286px;
-    height: 111px;
-    float: left;
-    text-decoration: none;
-    margin: 0 12px 12px 0;
-    border: 1px solid #8A9ABC;
-    border-bottom: 1px solid #8A9ABC;
+#content a:link.realisation,#content a:active.realisation,#content a:visited.realisation {
+position: relative;
+width: 286px;
+height: 111px;
+float: left;
+text-decoration: none;
+margin: 0 12px 12px 0;
+border: 1px solid #8A9ABC;
+border-bottom: 1px solid #8A9ABC;
 }
-
 #content a.realisation.last {
-    margin-right: 0px;
+margin-right: 0px;
 }
-
 #content .realisation .shadow {
-    height: 111px;
-    background: transparent url('../images/shadow-realisation.png') no-repeat top left;
+height: 111px;
+background: transparent url('../images/shadow-realisation.png') no-repeat top left;
 }
-
+/*Override plone css */
+#content ul {list-style :none;
+}
 #content .realisation .description {
-    position: absolute;
-    display: none;
-    width: 276px;
-    height: 13px;
-    padding: 5px;
-    left: 0px;
-    bottom: 0px;
-    background: transparent url('../images/realisation-hover-bg.png') no-repeat bottom left;
-    color: #FFF;
+position: absolute;
+display: none;
+width: 276px;
+height: 13px;
+padding: 5px;
+left: 0px;
+bottom: 0px;
+background: transparent url('../images/realisation-hover-bg.png') no-repeat bottom left;
+color: #FFF;
 }
-
-#content a:hover.realisation .description { display: block; }
-
-#content a.realisation img { border: none; }
-
+#content a:hover.realisation .description {
+display: block;
+}
+#content a.realisation img {
+border: none;
+}
 /* Overlay */
 /***********/
-
 #overlay {
-    position: relative;
+position: relative;
 }
-
 #overlay h1.documentFirstHeading {
-    color: #E3EEFF;
-    border-bottom: 2px solid #E3EEFF;
+color: #E3EEFF;
+border-bottom: 2px solid #E3EEFF;
 }
-
-#overlay h2 { color: #E3EEFF; }
-#overlay h2.first { margin: 0em 0 0.4em; }
-
+#overlay h2 {
+color: #E3EEFF;
+}
+#overlay h2.first {
+margin: 0em 0 0.4em;
+}
 #overlay img {
-    border: 1px solid #E3EEFF;
-    float: left;
-    margin: 0 15px 15px 0;
+border: 1px solid #E3EEFF;
+float: left;
+margin: 0 15px 15px 0;
 }
-
-#overlay table { margin-bottom: 10px; }
-#overlay table td { vertical-align: top; }
-
+#overlay table {
+margin-bottom: 10px;
+}
+#overlay table td {
+vertical-align: top;
+}
 #overlay .col-gauche {
-    position: relative;
-    width: 301px;
+position: relative;
+width: 301px;
 }
-
 #overlay .col-droite {
-    position: relative;
-    width: 490px;
+position: relative;
+width: 490px;
 }
-
 #overlay li {
-    margin: 1px 0 4px 20px;
-    padding: 0 0 0 12px;
-    background: transparent url('../images/puce-4x4-lightblue.gif') no-repeat left 0.6em;
+margin: 1px 0 4px 20px;
+padding: 0 0 0 12px;
+background: transparent url('../images/puce-4x4-lightblue.gif') no-repeat left 0.6em;
 }
-
 /* Plone */
 /*********/
-
-div.documentActions { display: none; }
+div.documentActions {
+display: none;
+}
