Fix bg color ##

--- a/affinitic/skin/static/css/overlays.css
+++ b/affinitic/skin/static/css/overlays.css
@@ -36,7 +36,7 @@ div.overlay div.close {
 
 .pb-ajax, .pb-image {
     background-color: #fff;
-    background: #A5BBE1 url('../images/overlay-bg.gif') repeat top left;
+    background: #C0D7F3 url('../images/overlay-bg.gif') repeat top left;
     border: 1px solid #999;
     white-space: normal;
     -moz-border-radius: 12px 12px 12px 12px;
