--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -1,9 +1,7 @@
 body{
 margin:0;
 background-color:#333333;
-background-image:url(images/bg_body_04.jpg);
-background-repeat:no-repeat;
-background-attachment:fixed;
+color:#999;
 }
 
 #wrapper{
@@ -12,19 +10,17 @@ background-attachment:fixed;
 #main-content{
 width:1000px;
 height:740px;
-border-radius:0px 30px 5px 25px;
-position:absolute;
-top:50%;
-left:50%;
-margin-top:-430px;
-margin-left:-500px;
-background-color:rgba(220,220,220,0.8);
+/*border-radius:0px 30px 5px 25px;*/
+margin:auto;
+margin-top:30px;
+background-color:rgba(255,255,255,0.89);
 }
+
 
 #menu-sup{
 border:1px solid #ddd;
-border-radius:0px 80px 0px 0px;
-background-color:rgba(180,180,180,0.5);
+/*border-radius:0px 80px 0px 0px;*/
+/*background-color:rgba(180,180,180,0.5);*/
 /*height:50px;*/
 }
 
@@ -42,9 +38,6 @@ border-right:1px solid #d7dada;
 font-size:0.8em;
 color:#555;
 text-shadow:1px 1px 1px rgba(255, 255, 255, 1);
-
-
-
 background:-moz-linear-gradient(top,  rgba(245,246,246,0.33) 0%, rgba(219,220,226,0.34) 21%, rgba(184,186,198,0.35) 49%, rgba(221,223,227,0.36) 80%, rgba(245,246,246,0.36) 100%);
 background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(245,246,246,0.33)), color-stop(21%,rgba(219,220,226,0.34)), color-stop(49%,rgba(184,186,198,0.35)), color-stop(80%,rgba(221,223,227,0.36)), color-stop(100%,rgba(245,246,246,0.36)));
 background:-webkit-linear-gradient(top,  rgba(245,246,246,0.33) 0%,rgba(219,220,226,0.34) 21%,rgba(184,186,198,0.35) 49%,rgba(221,223,227,0.36) 80%,rgba(245,246,246,0.36) 100%);
@@ -52,7 +45,6 @@ background:-o-linear-gradient(top,  rgba(245,246,246,0.33) 0%,rgba(219,220,226,0
 background:-ms-linear-gradient(top,  rgba(245,246,246,0.33) 0%,rgba(219,220,226,0.34) 21%,rgba(184,186,198,0.35) 49%,rgba(221,223,227,0.36) 80%,rgba(245,246,246,0.36) 100%);
 background:linear-gradient(to bottom,  rgba(245,246,246,0.33) 0%,rgba(219,220,226,0.34) 21%,rgba(184,186,198,0.35) 49%,rgba(221,223,227,0.36) 80%,rgba(245,246,246,0.36) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54f5f6f6', endColorstr='#5cf5f6f6',GradientType=0 );
-
 transition:all 0.5s ease-in;
 transition:all 0.5s ease-in;
 -moz-transition:all 0.5s ease-in;
@@ -96,7 +88,7 @@ min-height:685px;
 #footer{
 margin-top:20px;
 border-radius:12px;
-background-color:rgba(100,100,100,0.5);
+background-color:rgba(100,100,100,0.7);
 height:150px;
 }
 
@@ -109,9 +101,95 @@ background-color:transparent;
 clear:both;
 }
 
-#content h1.documentFirstHeading {
-margin-top: 0;
-color:rgba(140,51,16,0.28);
-border-bottom:1px dotted #ddd;
+#content p{
+font-size: 1em;
+line-height: 1.5em;
 }
+
+#content h1.documentFirstHeading {
+font:2em "NobileRegular", "Helvetica Neue",Arial,FreeSans,sans-serif;
+margin-top: 0;
+color:#7e725b;
+letter-spacing: 0.08em;
+}
+
+#content h2{
+font-size:1.2em;
+color:#333;
+letter-spacing:0em;
+}
+
+#content .documentDescription, #content #description {
+color:#7E725B;
+font:1.5em "NobileRegular", "Helvetica Neue",Arial,FreeSans,sans-serif;
+line-height: 1.5;
+margin: 1em 0px;
+}
+
+#content a:link, dl.portlet a:link {
+border-bottom: 0.1em solid #CCCCCC;
+color:#333; /*#205C90;*/
+}
+
+
+#content a:hover, dl.portlet a:hover {
+color:#855934 !important;  /*#205C90 !important;*/
+}
+
+
+
+
+
+/***  SUPERSIZED ***/
+#supersized{
+display:block;
+height:100%;
+left:0;
+overflow:hidden;
+position:fixed;
+top:0;
+width:100%;
+z-index:-999;
+}
+#supersized-loader{
+position:absolute;
+top:50%;
+left:50%;
+z-index:0;
+width:60px;
+height:60px;
+margin:-30px 0 0 -30px;
+text-indent:-999em;
+background:url(../img/progress.gif) no-repeat center center;
+}
+
+#supersized img{
+width:auto;
+height:auto;
+position:relative;
+display:none;
+outline:none;
+border:none;
+}
+#supersized.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
+#supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }			/*Quality*/
+
+#supersized li{
+display:block;
+list-style:none;
+z-index:-30;
+position:fixed;
+overflow:hidden;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:#111;
+}
+#supersized a { width:100%; height:100%; display:block; }
+#supersized li.prevslide { z-index:-20; }
+#supersized li.activeslide { z-index:-10; }
+#supersized li.image-loading { background:#111 url(../img/progress.gif) no-repeat center center; width:100%; height:100%; }
+#supersized li.image-loading img{ visibility:hidden; }
+#supersized li.prevslide img, #supersized li.activeslide img{ display:inline; }
 
